--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,6 @@
     "inquirer": "^8.2.0"
   },
   "devDependencies": {
-    "jest": "^27.4.2"
+    "jest": "^27.4.3"
   }
 }
